tests/good/example-13.rat
fn Main () -> Void {
  let mut a = 5;

  fn Nested () -> Void {
    a--;
    Println(ShowInt(a));
    return;
  }

  while (a > 0) {
    let a = "error";
    Nested();
  }

  return;
}
