tests/bad/example-e01.rat
fn Fail () -> Void {
  let a = 1 / 0;
  return;
}

fn Main () -> Void {
  return Fail();
}